# python-visual-library

./: .gitignore  README.md  VisualLibrary.py  pyproject.toml  requirements.txt  setup.py
exporter/: exporter.py  journal.py
importer/: htmlhandler.py  importer.py
src/VisualLibrary/: VisualLibrary.py  __init__.py
src/VisualLibrary/importer/: importer.py
tests/: conftest.py  testImporter.py  testPage.py  testVisualLibrary.py  test_Article.py  test_Importer.py  test_Page.py  test_VisualLibrary.py
tests/data/: article-oai-response.xml  full_text_data.py  oai-response.xml
tests/data/Article/: article_9738495.xml
tests/data/Importer/: volume-oai-response.xml
tests/data/Page/: article-oai-response.xml
tests/data/VisualLibrary/: article-oai-response.xml  journal-oai-response.xml  volume-oai-response.xml
