[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-library"
description = "Allows harvesting of Visual Library data from a VL server."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "AGPLv3"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "beautifulsoup4==4.11.2",
    "lxml",
    "more-itertools==8.4.0",
    "requests==2.28.2",
]
version = "1.2.0"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest~=7.1",
    "pytest-cov",
]
